<resources>
    <string name="app_name">Link Up</string>
    <string name="welcome_text">Link Up</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="name_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="username_taken">Username already exists!</string>
    <string name="user_not_found">User not found!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password (at least 6 characters)</string>
    <string name="password_hint_login">Password</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="username_error">Username can\'t be empty!</string>
    <string name="invalid_username">Invalid username!</string>
    <string name="password_error">Password can\'t be empty!</string>
    <string name="small_password_error">Password is too short!</string>
    <string name="name_error">Name can\'t be empty!</string>
    <string name="email_error">Email can\'t be empty!</string>
    <string name="back_button">BACK</string>
    <string name="home_page">HOME</string>
    <string name="friends_page">FRIENDS</string>
    <string name="requests_page">FRIEND REQUESTS</string>
    <string name="options_page">OPTIONS</string>
    <string name="logout">LOGOUT</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="send_request_button">SEND REQUEST</string>
    <string name="request_already_sent">Friend request already sent or received!</string>
    <string name="request_failed">Failed to send friend request. Please try again.</string>
    <string name="requests_channel">Requests</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="pref_language">Preferred Language:</string>
    <string name="delete_user">DELETE ACCOUNT</string>
    <string name="apply_changes">APPLY</string>
    <string name="new_username_hint">New Username</string>
    <string name="new_password_hint">New Password</string>
    <string name="invalid_password">Same password as the old one!</string>
    <string name="blocked_users_page">BLOCKED USERS</string>
    <string name="blocked_at">Blocked at: </string>
    <string name="user_blocked">User is blocked!</string>
    <string name="new_chat_prompt">SELECT A FRIEND</string>
    <string name="about_page">ABOUT</string>
    <string name="message_prompt">Type your message...</string>
    <string name="seen">✔️✔️</string>
</resources>