<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/homePage"
            android:icon="@drawable/home"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/home_page" />
        <item
            android:id="@+id/friendsPage"
            android:icon="@drawable/friends"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/friends_page" />
        <item
            android:id="@+id/requestsPage"
            android:icon="@drawable/add_friend"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/requests_page" />
        <item
            android:id="@+id/blockedUsersPage"
            android:icon="@drawable/block_user"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/blocked_users_page" />
        <item
            android:id="@+id/optionsPage"
            android:icon="@drawable/settings"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/options_page" />
        <item
            android:id="@+id/aboutPage"
            android:icon="@drawable/about_icon"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/about_page" />
        <item
            android:id="@+id/logoutBtn"
            android:icon="@drawable/logout"
            android:fontFamily="@font/noto_sans_bold"
            android:title="@string/logout" />
    </group>
</menu>