<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:context=".activities.LogInActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputContainer"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:boxStrokeColor="@color/stroke_color"
        app:boxBackgroundMode="outline"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:fontFamily="@font/noto_sans_bold"
        android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputContainer"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/stroke_color"
        app:errorEnabled="true"
        app:endIconTint="?colorOnSurface"
        app:layout_constraintBottom_toTopOf="@id/submitLoginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint_login"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:fontFamily="@font/noto_sans_bold"
            android:padding="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitLoginBtn"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/login"
        android:textColor="?colorOnPrimary"
        android:textSize="24sp"
        app:backgroundTint="?colorPrimary"
        app:cornerRadius="16dp"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBtn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:clickable="true"
        android:elevation="6dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/usernameInputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:textColor="?colorError"
        android:fontFamily="@font/noto_sans_bold"
        app:layout_constraintBottom_toTopOf="@+id/usernameInputContainer"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>